   interaction with 'HashTables' extension.
   - Compatbility with other extensions increased by using one hash tables store per Parser instance.
   - Inclusion of special pages in the middle of the page won't reset all defined hash tables anymore.
   - arrayprint will handle <includeonly>/<noinclude> correct in case it's used in a template.


 * November 4, 2011 -- Version 0.7
   - buggy behavior in 'hashkeyexists' which led to expanding both arguments 'yes' and 'no' in
     case custom arguments were given is solved. Now only the one actual case is being expanded.
   - 'hashtotemplate' now changes '{' to '&#123;' since '{{' made some problems in some cases.
   - 'hashprint' last parameter for print order now evaluates templates and arguments as it should
     always have done.
   - 'hashmerge' on single hash will re-asign its numeric keys in ascending order instead of doing nothing.
   - using hook 'ParserFirstCallInit' now.
   - some gernal cleanup done.
   - put into wikimedia.org svn (http://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions/HashTables/)
   - distributed under ISC license.
	

 * August 3, 2011 -- Version 0.6.3
   - minor bug in 'parameterstohash' function solved.
   
 * March 29, 2011 -- Version 0.6.2
   - 'hashtotemplate' has a new parameter to define a string which will replace pipes '|'. Can be
     useful to preserve links.
	
 * January 24, 2011 -- Version 0.6.1
   - Constant VERSION and function getHash() added to class ExtHashTables.
   
 * January 19, 2011 -- Version 0.6
   - New public class methods for creating and removing hash tables. Good for use by other extensions.
   - New experimental function 'hashtotemplate'.
   
   
 * August 3, 2010 -- Version 0.5.1
   - Hashinclude didn't trim key and value so keys with ending space ' ' and values with leading
     space were possible when defining something like {{#hashinclude: a | a = 1}}
   
 * August 1, 2010 -- Version 0.5